# routes/posts.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const {
+  createPost
+} = require('../controllers/postController');
+
+const router = express.Router({ mergeParams: true });
+
+router.route('/createPost').post(createPost);
+
+module.exports = router;
